# langgraph-scrm

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md  migration-guide.md  module-guide.md
docs/superpowers/plans/: 2026-07-02-langgraph-scrm.md
docs/superpowers/specs/: 2026-07-02-langgraph-scrm-design.md
scripts/: run_all.py  run_module.py  seed_data.py
src/: __init__.py
src/api/: __init__.py  deps.py  main.py  middleware.py  schemas.py
src/api/routes/: __init__.py  after_sale.py  intent_router.py  knowledge_qa.py  lead_qualifier.py  multi_agent.py  wechat_risk.py
src/config/: __init__.py  prompts.py  settings.py
src/core/: __init__.py  checkpoint.py  llm.py  nodes.py  state.py  tools.py
src/data/: __init__.py  seed_db.py
src/data/sample_docs/: 01_product_overview.md  02_wechat_features.md  03_customer_management.md  04_after_sale_policy.md  05_order_tracking.md
src/data/sample_messages/: business_messages.json  (+3 more)
src/modules/: __init__.py
tests/: conftest.py
tests/api/: __init__.py  test_routes.py
tests/graph/: __init__.py  test_after_sale_graph.py  test_intent_router_graph.py  test_knowledge_qa_graph.py  test_lead_qualifier_graph.py  test_multi_agent_graph.py  test_wechat_risk_graph.py
tests/unit/: __init__.py  test_after_sale_nodes.py  test_checkpoint.py  test_intent_nodes.py  test_knowledge_nodes.py  test_lead_nodes.py  test_llm.py  test_multi_agent_nodes.py  test_settings.py  test_wechat_risk_nodes.py
(+31 files in other folders)
